# mate-file-manager-image-converter

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am
po/: LINGUAS  POTFILES.in  am.po  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  eo.po  es.po  es_CL.po  et.po  eu.po  fi.po  fr.po  gl.po  gnome-copyrights.txt  he.po  hu.po  id.po  is.po  it.po  ja.po  ky.po  lv.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sq.po  sv.po  tr.po  (+3 more)
src/: Makefile.am  caja-image-converter.c  caja-image-converter.h  caja-image-resizer.c  caja-image-resizer.h  caja-image-rotator.c  caja-image-rotator.h  image-converter.c
